* #639 Add "User-Agent" header when downloading file -- thanks to Aleksandr Rasolka @rosolko
* #556 add possibility to set custom capabilities for custom Chrome options or Firefox profies  --  Thanks to @SergeyPirogov for PR 556 and @BorisOsipov for PR 664
* #660 add possibility to create headless RemoteDriver  -- thanks to @BorisOsipov for PR 661
* upgrade to htmlunit 2.29 & guava:23.6-jre
* upgrade to phantomjsdriver 1.4.4

=== 4.9.1 (released 31.12.2017)
* fixed bug where disabled input fields were not handled properly by setValue()
* fixed behaviour of setFastValue, which caused blur event to be ignored
* #654 fixed ClassCastException in WebDriverFactory#logBrowserVersion()

=== 4.9 (released 20.12.2017)
* #638 upgrade to selenium-java:3.8.1  -- thanks to Aleksandr Rasolka
* #621 Make marionette the default firefox driver implementation -- thanks to ostap-oleksyn
* #617 Fix initialization of SelenideElements without @FindBy annotation declared inside ElementsContainer -- thanks to Artem Savosik @CaBocuk
* #623 Add methods `$$(“.item”).first(3)` and `$$(“.item”).last(3)` -- thanks to ostap-oleksyn
* #627 Add ability to set browser binary path using configuration parameter -- thanks to ostap-oleksyn
* #634 fix method prompt() in HtmlUnit -- thanks to Anton Aftakhov
* upgrade to guava:23.5-jre
* upgrade to httpcore:4.4.8
* upgrade to htmlunit-driver:2.28.2
* upgrade to webdrivermanager:2.0.1

=== 4.8 (released 08.10.2017)
* updated to selenium 3.6   -- thanks to ostap-oleksyn
* upgraded to org.apache.httpcomponents:httpcore:4.4.7
* #614 fix issue with soft asserts   -- thanks to ostap-oleksyn

=== 4.7.1 (released 05.10.2017)
* declare compile-time dependency `guava 23.0` instead of `guava 21.0` (for those whose Maven downloads the older guava version)

=== 4.7 (released 29.09.2017)
* upgrade to selenium-java 3.5.3
* upgrade to browsermob-core 2.1.5 (and downgrade to littleproxy 1.1.0-beta-bmp-17)
* #610 integration with DriverManager