@@ -177,6 +177,8 @@
         </fieldset>
       </form>
     </div>
+
+    <span id="hello-world">Hello&nbsp;world</span>
     
     <div style="display: none;" 
          id="gopher" 
